// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Snapshots Select with label and items 1`] = `
.c2 {
  position: absolute;
  top: 50%;
  left: 1em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 1;
  white-space: nowrap;
  pointer-events: none;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c0 {
  position: relative;
  display: block;
}

.c3 {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  width: 100%;
  padding: 10px;
  border: none;
  background: transparent;
  color: #303030;
  outline: none;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  line-height: 1.6;
  text-align: left;
}

.c6 {
  margin-right: -5px;
  color: #B4B4B4;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      What is your vehicle type?
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="c3"
      role="combobox"
    >
      <button
        aria-autocomplete="list"
        aria-haspopup="true"
        aria-label="open menu"
        aria-labelledby="downshift-0-label"
        autocomplete="off"
        class="c4"
        data-required="false"
        data-toggle="true"
        id="downshift-0-input"
        role="button"
        type="button"
        value=""
      >
        <span
          class="c5"
        />
        <span
          class="c6"
        >
          <svg
            aria-hidden="false"
            aria-labelledby="title"
            focusable="false"
            role="img"
            style="vertical-align:middle;fill:currentColor;width:24px;height:24px"
            viewBox="0 0 217 217"
          >
            <title>
              DropDown
            </title>
            <g
              transform="matrix(1,0,0,1,108.55,108.721)"
            >
              <g
                transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
              >
                <path
                  d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
                  transform="matrix(1,0,0,1,-108.55,-108.721)"
                />
              </g>
            </g>
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots Select with label, items and error message 1`] = `
.c2 {
  position: absolute;
  top: 50%;
  left: 1em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 1;
  white-space: nowrap;
  pointer-events: none;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: #D8534F;
  top: 0;
  left: 0.5em;
  padding: 0 4px;
  background-color: rgba(255,255,255,1);
  -webkit-transform: translateY(-50%) scale(0.7);
  -ms-transform: translateY(-50%) scale(0.7);
  transform: translateY(-50%) scale(0.7);
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
  border: 1px solid #D8534F;
  background-color: rgba(216,83,79,0.1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  line-height: 1.4;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 0;
  color: #D8534F;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 12px;
}

.c10 {
  margin-left: 1em;
}

.c0 {
  position: relative;
  display: block;
  padding-bottom: 2em;
}

.c3 {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  width: 100%;
  padding: 10px;
  border: none;
  background: transparent;
  color: #303030;
  outline: none;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  line-height: 1.6;
  text-align: left;
}

.c6 {
  margin-right: -5px;
  color: #B4B4B4;
}

.c8 {
  position: absolute;
  z-index: 1;
  right: 0;
  left: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      What is your vehicle type?
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      class="c3"
      role="combobox"
    >
      <button
        aria-autocomplete="list"
        aria-haspopup="true"
        aria-label="open menu"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        class="c4"
        data-required="false"
        data-toggle="true"
        id="downshift-1-input"
        role="button"
        type="button"
        value=""
      >
        <span
          class="c5"
        />
        <span
          class="c6"
        >
          <svg
            aria-hidden="false"
            aria-labelledby="title"
            focusable="false"
            role="img"
            style="vertical-align:middle;fill:currentColor;width:24px;height:24px"
            viewBox="0 0 217 217"
          >
            <title>
              DropDown
            </title>
            <g
              transform="matrix(1,0,0,1,108.55,108.721)"
            >
              <g
                transform="matrix(6.12323e-17,-1,1,6.12323e-17,0,0)"
              >
                <path
                  d="M138.141,158.426c-0.650773,0.080458 -1.30311,-0.136988 -1.77545,-0.591818l-59.1818,-46.7536c-0.731607,-0.570007 -1.16659,-1.43998 -1.18364,-2.36727c0.147609,-0.890133 0.560095,-1.71511 1.18364,-2.36727l59.1818,-46.7536c1.30741,-0.980556 3.16217,-0.71559 4.14273,0.591818c0.980556,1.30741 0.71559,3.16217 -0.591818,4.14273l-56.2227,44.3864l56.2227,44.3864c1.0494,1.11878 1.28598,2.77487 0.591818,4.14273c-0.652167,0.623542 -1.47714,1.03603 -2.36727,1.18364v0Z"
                  transform="matrix(1,0,0,1,-108.55,-108.721)"
                />
              </g>
            </g>
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c7 c8"
  >
    <span
      class="c9"
    >
      Error message
    </span>
    <span
      class="c10"
    >
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:#D8534F;width:13px;height:13px"
        viewBox="0 0 217 217"
      >
        <title>
          Warning
        </title>
        <g>
          <rect
            fill="none"
            height="217"
            width="217"
          />
          <path
            d="M109,36.62a9.23,9.23,0,0,1,6.56,2.7,9.74,9.74,0,0,1,1.83,2.61,9.6,9.6,0,0,0,.65,1.12l70.43,122,.15.24a9.27,9.27,0,0,1-8,14.14l-.66,0c-.2,0-.41,0-.62,0h-.52l-141,0h-.56a9.24,9.24,0,0,1-8-4.62,9.29,9.29,0,0,1-.93-7.07l0-.05a8.74,8.74,0,0,1,1.26-2.73,8.13,8.13,0,0,0,.58-1L100.53,42c.12-.19.23-.38.34-.59a8.81,8.81,0,0,1,1.56-2.1A9.23,9.23,0,0,1,109,36.62M31.17,159.81h0M109,27.62A18.22,18.22,0,0,0,96.07,33a17.53,17.53,0,0,0-3.17,4.28h0L22.17,159.81v0a17.73,17.73,0,0,0-2.54,5.52,18.24,18.24,0,0,0,17.65,23h.56l141.53,0h0c.43,0,.85,0,1.28,0a18.27,18.27,0,0,0,15.62-27.89L125.49,38h0a18.68,18.68,0,0,0-3.53-5A18.22,18.22,0,0,0,109,27.62Z"
          />
          <circle
            cx="109"
            cy="158.63"
            r="9"
          />
          <path
            d="M118,131.5a9,9,0,0,1-18,0V77.37a9,9,0,0,1,18,0Z"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;
